added plato type pictures

--- a/example/index.html
+++ b/example/index.html
@@ -166,6 +166,34 @@
 		</div>
 	</div>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt plato left top">
+		<h3>I'm Plato LT!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt plato right top">
+		<h3>I'm Plato RT!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt plato left bottom">
+		<h3>I'm Plato LB!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt plato right bottom">
+		<h3>I'm Plato RB!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example TXT Tabs</h2>
 	<div class="tabs">
@@ -189,6 +217,13 @@
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
 		</a>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fly reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section example">
@@ -316,6 +351,13 @@
 			<h3>EXAMPLE h</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fly">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="bx-section example">
