--- a/example/index.html
+++ b/example/index.html
@@ -24,6 +24,13 @@
 	<h3>EXAMPLE PAGE</h3>
 	<h1>Hi, I'm an <span>example page</span> and I'm boring...in a good way!</h1>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example List</h2>
 	<div class="lists">
@@ -59,6 +66,13 @@
 			<h3>EXAMPLE h</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section example">
