added combination picture types
sliding fades, fading pops, fading fly, fading swipes

--- a/example/index.html
+++ b/example/index.html
@@ -102,6 +102,13 @@
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade swipe">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt swipe">
 		<h3>hello there!</h3>
 		<p>i am a paragraph!</p>
@@ -134,6 +141,20 @@
 			<h3>EXAMPLE 3b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide right fade">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide right fade reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
@@ -235,6 +256,13 @@
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade fly reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt fly reverse">
 		<h3>hello there!</h3>
 		<p>i am a paragraph!</p>
@@ -267,6 +295,20 @@
 			<h3>EXAMPLE 3b</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</a>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide left fade">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide left fade reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
@@ -374,6 +416,13 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade fly">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="bx-section example">
 	<h2><i data-feather="align-right"></i> Example BX Tabs</h2>
 	<div class="tabs">
@@ -397,6 +446,13 @@
 			<p>example text. blah blah blah.</p>
 			<img src="https://placehold.co/600x400" alt="placeholder">
 		</a>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade swipe reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
@@ -438,6 +494,13 @@
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt pop reverse">
+		<h3>hello there!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt pop fade reverse">
 		<h3>hello there!</h3>
 		<p>i am a paragraph!</p>
 	</div>
