fading plato type

--- a/example/index.html
+++ b/example/index.html
@@ -229,6 +229,34 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade plato left top">
+		<h3>I'm Plato LTF!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade plato right top">
+		<h3>I'm Plato RTF!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade plato left bottom">
+		<h3>I'm Plato LBF!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt fade plato right bottom">
+		<h3>I'm Plato RBF!</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example TXT Tabs</h2>
 	<div class="tabs">
