added titles to example objects, consistent class names, fixed Swipe objects using text-align

--- a/example/index.html
+++ b/example/index.html
@@ -27,7 +27,7 @@
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt fade">
-		<h3>hello there!</h3>
+		<h3>Example Fade</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -71,7 +71,7 @@
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt fade reverse">
-		<h3>hello there!</h3>
+		<h3>Example FadeR</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -102,15 +102,15 @@
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade swipe">
-		<h3>hello there!</h3>
+	<div class="imagetxt swipe">
+		<h3>Example Swipe</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt swipe">
-		<h3>hello there!</h3>
+	<div class="imagetxt swipe fade">
+		<h3>Example SwipeF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -145,22 +145,22 @@
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide right">
+		<h3>Example SlideR</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt slide right fade">
-		<h3>hello there!</h3>
+		<h3>Example SlideRF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt slide right fade reverse">
-		<h3>hello there!</h3>
-		<p>i am a paragraph!</p>
-	</div>
-</div>
-<div class="section picture">
-	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt slide right">
-		<h3>hello there!</h3>
+		<h3>Example SlideRFR</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -204,56 +204,56 @@
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt plato left top">
-		<h3>I'm Plato LT!</h3>
+		<h3>Example PlatoLT</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt plato right top">
-		<h3>I'm Plato RT!</h3>
+		<h3>Example PlatoRT</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt plato left bottom">
-		<h3>I'm Plato LB!</h3>
+		<h3>Example PlatoLB</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt plato right bottom">
-		<h3>I'm Plato RB!</h3>
+		<h3>Example PlatoRB</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade plato left top">
-		<h3>I'm Plato LTF!</h3>
+	<div class="imagetxt plato left top fade">
+		<h3>Example PlatoLTF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade plato right top">
-		<h3>I'm Plato RTF!</h3>
+	<div class="imagetxt plato right top fade">
+		<h3>Example PlatoRTF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade plato left bottom">
-		<h3>I'm Plato LBF!</h3>
+	<div class="imagetxt plato left bottom fade">
+		<h3>Example PlatoLBF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade plato right bottom">
-		<h3>I'm Plato RBF!</h3>
+	<div class="imagetxt plato right bottom fade">
+		<h3>Example Plato RBF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -284,15 +284,15 @@
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade fly reverse">
-		<h3>hello there!</h3>
+	<div class="imagetxt fly reverse">
+		<h3>Example FlyR</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fly reverse">
-		<h3>hello there!</h3>
+	<div class="imagetxt fly reverse fade">
+		<h3>Example FlyRF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -327,22 +327,22 @@
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt slide left">
+		<h3>Example SlideL</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt slide left fade">
-		<h3>hello there!</h3>
+		<h3>Example SlideLF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt slide left fade reverse">
-		<h3>hello there!</h3>
-		<p>i am a paragraph!</p>
-	</div>
-</div>
-<div class="section picture">
-	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt slide left">
-		<h3>hello there!</h3>
+		<h3>Example SlideLFR</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -396,7 +396,14 @@
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt pop">
-		<h3>hello there!</h3>
+		<h3>Example Pop</h3>
+		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section picture">
+	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
+	<div class="imagetxt pop fade">
+		<h3>Example PopF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -440,14 +447,14 @@
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt fly">
-		<h3>hello there!</h3>
+		<h3>Example Fly</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade fly">
-		<h3>hello there!</h3>
+	<div class="imagetxt fly fade">
+		<h3>Example FlyF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -478,15 +485,15 @@
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt fade swipe reverse">
-		<h3>hello there!</h3>
+	<div class="imagetxt swipe reverse">
+		<h3>Example SwipeR</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt swipe reverse">
-		<h3>hello there!</h3>
+	<div class="imagetxt swipe reverse fade">
+		<h3>Example SwipeRF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
@@ -522,14 +529,14 @@
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt pop reverse">
-		<h3>hello there!</h3>
+		<h3>Example PopR</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
-	<div class="imagetxt pop fade reverse">
-		<h3>hello there!</h3>
+	<div class="imagetxt pop reverse fade">
+		<h3>Example PopRF</h3>
 		<p>i am a paragraph!</p>
 	</div>
 </div>
