--- a/example/index.html
+++ b/example/index.html
@@ -541,7 +541,7 @@
 	</div>
 </div>
 <div class="footer">
-	<p>Made with <i data-feather="cloud-upload"></i> by sbird</p>
+	<p>Made with <i data-feather="upload-cloud"></i> by sbird</p>
 </div>
 <script>
 	feather.replace();
