added funny words

--- a/example/index.html
+++ b/example/index.html
@@ -31,6 +31,17 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
+<div class="section words">
+	<div class="word w1 right">
+		<h3>Word 1</h3>
+	</div>
+	<div class="word w2 left">
+		<h3>Word 2</h3>
+	</div>
+	<div class="word w3 right">
+		<h3>Word 3</h3>
+	</div>
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example List</h2>
 	<div class="lists">
@@ -73,6 +84,17 @@
 	<div class="imagetxt fade reverse">
 		<h3>Example FadeR</h3>
 		<p>i am a paragraph!</p>
+	</div>
+</div>
+<div class="section words">
+	<div class="word w4 right">
+		<h3>Word 4</h3>
+	</div>
+	<div class="word w5 left">
+		<h3>Word 5</h3>
+	</div>
+	<div class="word w6 right">
+		<h3>Word 6</h3>
 	</div>
 </div>
 <div class="section example">
@@ -199,6 +221,17 @@
 			<h3>EXAMPLE h</h3>
 			<p>example paragraph. blah blah blah.</p>
 		</div>
+	</div>
+</div>
+<div class="section words">
+	<div class="word w7 right">
+		<h3>Word 7</h3>
+	</div>
+	<div class="word w8 left">
+		<h3>Word 8</h3>
+	</div>
+	<div class="word w9 right">
+		<h3>Word 9</h3>
 	</div>
 </div>
 <div class="section picture">
