added multipictures, disabled horizontal scrolling

--- a/example/index.html
+++ b/example/index.html
@@ -79,6 +79,10 @@
 		</div>
 	</div>
 </div>
+<div class="section multipicture">
+	<img class="slide1" src="https://placehold.co/600x300" alt="placeholder">
+	<img class="slide2" src="https://placehold.co/600x300" alt="placeholder">
+</div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt fade reverse">
@@ -185,6 +189,10 @@
 		<h3>Example SlideRFR</h3>
 		<p>i am a paragraph!</p>
 	</div>
+</div>
+<div class="section multipicture">
+	<img class="slide1" src="https://placehold.co/600x200" alt="placeholder">
+	<img class="slide2" src="https://placehold.co/600x200" alt="placeholder">
 </div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example TXT List</h2>
@@ -328,6 +336,10 @@
 		<h3>Example FlyRF</h3>
 		<p>i am a paragraph!</p>
 	</div>
+</div>
+<div class="section multipicture">
+	<img class="slide1" src="https://placehold.co/600x300" alt="placeholder">
+	<img class="slide2" src="https://placehold.co/600x300" alt="placeholder">
 </div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example TXT Cards</h2>
