added swipe multipicture

--- a/example/index.html
+++ b/example/index.html
@@ -191,8 +191,11 @@
 	</div>
 </div>
 <div class="section multipicture">
-	<img class="slide1" src="https://placehold.co/600x200" alt="placeholder">
-	<img class="slide2" src="https://placehold.co/600x200" alt="placeholder">
+	<img class="swipe1" src="https://placehold.co/600x200/red/000000" alt="placeholder">
+	<img class="swipe2" src="https://placehold.co/600x200/blue/000000" alt="placeholder">
+	<img class="swipe3" src="https://placehold.co/600x200/purple/000000" alt="placeholder">
+	<img class="swipe4" src="https://placehold.co/600x200/orange/000000" alt="placeholder">
+	<img class="swipe5" src="https://placehold.co/600x200/cyan/000000" alt="placeholder">
 </div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example TXT List</h2>
@@ -269,6 +272,13 @@
 		<h3>Example PlatoRB</h3>
 		<p>i am a paragraph!</p>
 	</div>
+</div>
+<div class="section multipicture">
+	<img class="swipe1" src="https://placehold.co/600x200/red/000000" alt="placeholder">
+	<img class="swipe2" src="https://placehold.co/600x200/blue/000000" alt="placeholder">
+	<img class="swipe3" src="https://placehold.co/600x200/purple/000000" alt="placeholder">
+	<img class="swipe4" src="https://placehold.co/600x200/orange/000000" alt="placeholder">
+	<img class="swipe5" src="https://placehold.co/600x200/cyan/000000" alt="placeholder">
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
