--- a/example/index.html
+++ b/example/index.html
@@ -42,6 +42,12 @@
 		<h3>Word 3</h3>
 	</div>
 </div>
+<div class="section multipicture">
+	<img class="corner1" src="https://placehold.co/600x400/red/000000" alt="placeholder">
+	<img class="corner2" src="https://placehold.co/600x400/blue/000000" alt="placeholder">
+	<img class="corner3" src="https://placehold.co/600x400/purple/000000" alt="placeholder">
+	<img class="corner4" src="https://placehold.co/600x400/orange/000000" alt="placeholder">
+</div>
 <div class="section example">
 	<h2><i data-feather="align-right"></i> Example List</h2>
 	<div class="lists">
