added fuzzy cycle multipicture

--- a/example/index.html
+++ b/example/index.html
@@ -42,7 +42,7 @@
 		<h3>Word 3</h3>
 	</div>
 </div>
-<div class="section multipicture cycles">
+<div class="section multipicture cycles glow">
 	<img class="cycle1" src="https://placehold.co/600x400" alt="placeholder">
 	<img class="cycle2" src="https://placehold.co/600x400" alt="placeholder">
 	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
@@ -131,6 +131,12 @@
 			<img src="https://placehold.co/600x400" alt="placeholder">
 		</a>
 	</div>
+</div>
+<div class="section multipicture cycles fuzzy">
+	<img class="cycle1" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle2" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
 </div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
