added paint cycle multipicture

--- a/example/index.html
+++ b/example/index.html
@@ -181,6 +181,12 @@
 		</a>
 	</div>
 </div>
+<div class="section multipicture cycles paint">
+	<img class="cycle1" src="https://placehold.co/600x400/cyan/red" alt="placeholder">
+	<img class="cycle2" src="https://placehold.co/600x400/cyan/red" alt="placeholder">
+	<img class="cycle3" src="https://placehold.co/600x400/cyan/red" alt="placeholder">
+	<img class="cycle4" src="https://placehold.co/600x400/cyan/red" alt="placeholder">
+</div>
 <div class="section picture">
 	<img class="image" src="https://placehold.co/600x200" alt="placeholder">
 	<div class="imagetxt slide right">
