added scroll cycle multipicture

--- a/example/index.html
+++ b/example/index.html
@@ -531,6 +531,12 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
+<div class="section multipicture cycles scroll">
+	<img class="cycle1" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle2" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
+	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
+</div>
 <div class="bx-section example">
 	<h2><i data-feather="align-right"></i> Example BX Tabs</h2>
 	<div class="tabs">
