added example page to navbar

--- a/page3/index.html
+++ b/page3/index.html
@@ -18,6 +18,7 @@
 		<li><a class="page3 activenav" href=""><i data-feather="layout"></i></a></li>
 		<li><a class="page4" href="../page4/"><i data-feather="layout"></i></a></li>
 		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
+		<li><a class="example" href="../example/"><i data-feather="tool"></i></a></li>
 	</ul>
 </nav>
 <div class="header">
