removed redundant example class, reduced number of lines of css

--- a/rainforest/index.html
+++ b/rainforest/index.html
@@ -110,7 +110,7 @@
 		</div>
 	</div>
 </div>
-<div class="bx-section example">
+<div class="bx-section">
 	<h2><i data-feather="align-right"></i> Causes of Deforestation</h2>
 	<div class="lists">
 		<div class="float big-list">
