--- a/example/index.html
+++ b/example/index.html
@@ -48,7 +48,7 @@
 	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
 	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
 </div>
-<div class="section example">
+<div class="section">
 	<h2><i data-feather="align-right"></i> Example List</h2>
 	<div class="lists">
 		<div class="float list">
@@ -107,7 +107,7 @@
 		<h3>Word 6</h3>
 	</div>
 </div>
-<div class="section example">
+<div class="section">
 	<h2><i data-feather="align-right"></i> Example Tabs</h2>
 	<div class="tabs">
 		<a class="float tab" href="https://github.com">
@@ -152,7 +152,7 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
-<div class="section example">
+<div class="section">
 	<h2><i data-feather="align-right"></i> Example Cards</h2>
 	<div class="cards">
 		<a class="float card" href="https://github.com">
@@ -215,7 +215,7 @@
 	<img class="swipe4" src="https://placehold.co/600x200/orange/000000" alt="placeholder">
 	<img class="swipe5" src="https://placehold.co/600x200/cyan/000000" alt="placeholder">
 </div>
-<div class="section example">
+<div class="section">
 	<h2><i data-feather="align-right"></i> Example TXT List</h2>
 	<div class="lists">
 		<div class="txt list">
@@ -326,7 +326,7 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
-<div class="section example">
+<div class="section">
 	<h2><i data-feather="align-right"></i> Example TXT Tabs</h2>
 	<div class="tabs">
 		<a class="txt tab" href="https://github.com">
@@ -369,7 +369,7 @@
 	<img class="slide1" src="https://placehold.co/600x300" alt="placeholder">
 	<img class="slide2" src="https://placehold.co/600x300" alt="placeholder">
 </div>
-<div class="section example">
+<div class="section">
 	<h2><i data-feather="align-right"></i> Example TXT Cards</h2>
 	<div class="cards">
 		<a class="txt card" href="https://github.com">
@@ -419,7 +419,7 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
-<div class="section example">
+<div class="section">
 	<h2><i data-feather="align-right"></i> Example Timeline</h2>
 	<div class="timeline">
 		<div class="point">
@@ -480,7 +480,7 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
-<div class="bx-section example">
+<div class="bx-section">
 	<h2><i data-feather="align-right"></i> Example BX List</h2>
 	<div class="lists">
 		<div class="float list">
@@ -537,7 +537,7 @@
 	<img class="cycle3" src="https://placehold.co/600x400" alt="placeholder">
 	<img class="cycle4" src="https://placehold.co/600x400" alt="placeholder">
 </div>
-<div class="bx-section example">
+<div class="bx-section">
 	<h2><i data-feather="align-right"></i> Example BX Tabs</h2>
 	<div class="tabs">
 		<a class="float tab" href="https://github.com">
@@ -576,7 +576,7 @@
 		<p>i am a paragraph!</p>
 	</div>
 </div>
-<div class="bx-section example">
+<div class="bx-section">
 	<h2><i data-feather="align-right"></i> Example BX Cards</h2>
 	<div class="cards">
 		<a class="float card" href="https://github.com">
