renamed placeholder pages, fonts and images folder changed to _fonts and _images

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 <nav>
 	<ul>
 		<li><a class="home activenav" href=""><i data-feather="droplet"></i></a></li>
-		<li><a class="page1" href="page1/"><i data-feather="layout"></i></a></li>
-		<li><a class="page2" href="page2/"><i data-feather="layout"></i></a></li>
-		<li><a class="page3" href="page3/"><i data-feather="layout"></i></a></li>
-		<li><a class="page4" href="page4/"><i data-feather="layout"></i></a></li>
+		<li><a class="projects" href="projects/"><i data-feather="layout"></i></a></li>
+		<li><a class="articles" href="articles/"><i data-feather="layout"></i></a></li>
+		<li><a class="games" href="games/"><i data-feather="layout"></i></a></li>
+		<li><a class="other" href="other/"><i data-feather="layout"></i></a></li>
 		<li><a class="about" href="about/"><i data-feather="coffee"></i></a></li>
 		<li><a class="example" href="example/"><i data-feather="tool"></i></a></li>
 	</ul>
