--- a/projects/index.html
+++ b/projects/index.html
@@ -3,27 +3,27 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>sbird \_'v'_/</title>
-	<link rel="icon" type="image/x-icon" href="../bird3.svg" class="fav">
+	<title>sbird \_^v^_/</title>
+	<link rel="icon" type="image/x-icon" href="../kiwi.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/_fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
 <nav>
 	<ul>
 		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="page1" href="../page1/"><i data-feather="layout"></i></a></li>
-		<li><a class="page2" href="../page2/"><i data-feather="layout"></i></a></li>
-		<li><a class="page3 activenav" href=""><i data-feather="layout"></i></a></li>
-		<li><a class="page4" href="../page4/"><i data-feather="layout"></i></a></li>
+		<li><a class="projects activenav" href=""><i data-feather="layout"></i></a></li>
+		<li><a class="articles" href="../articles/"><i data-feather="layout"></i></a></li>
+		<li><a class="games" href="../games/"><i data-feather="layout"></i></a></li>
+		<li><a class="other" href="../other/"><i data-feather="layout"></i></a></li>
 		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
 		<li><a class="example" href="../example/"><i data-feather="tool"></i></a></li>
 	</ul>
 </nav>
 <div class="header">
 	<h3>hello</h3>
-	<h1>Good evening, I'm <span>page3</span> and I firmly believe cereal is a soup</h1>
+	<h1>Good morning, I'm <span>projects</span> and I like snakes</h1>
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
