--- a/rainforest/index.html
+++ b/rainforest/index.html
@@ -6,7 +6,7 @@
 	<title>Deforestation of the Amazon Rainforest</title>
 	<link rel="icon" type="image/x-icon" href="../kiwi.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/_fonts/remixicon.css"/>
 	<link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
@@ -14,10 +14,10 @@
 <nav>
 	<ul>
 		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="page1" href="../page1/"><i data-feather="layout"></i></a></li>
-		<li><a class="page2" href="../page2/"><i data-feather="layout"></i></a></li>
-		<li><a class="page3" href="../page3/"><i data-feather="layout"></i></a></li>
-		<li><a class="page4" href="../page4/"><i data-feather="layout"></i></a></li>
+		<li><a class="projects" href="../projects/"><i data-feather="layout"></i></a></li>
+		<li><a class="articles" href="../articles/"><i data-feather="layout"></i></a></li>
+		<li><a class="games" href="../games/"><i data-feather="layout"></i></a></li>
+		<li><a class="other" href="../other/"><i data-feather="layout"></i></a></li>
 		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
 	</ul>
 </nav>
@@ -66,22 +66,22 @@
 		<div class="float tab">
 			<h3>Poison Dart Frog</h3>
 			<p>The bright colour serves as a warning to predators of its toxicity There are also some other species of frog that aren't poisonous that copy the appearance of poison dart frogs!</p>
-			<img src="../images/poison-dart-frog.jpg" alt="placeholder">
+			<img src="../_images/poison-dart-frog.jpg" alt="placeholder">
 		</div>
 		<div class="float tab">
 			<h3>Spider Monkey</h3>
 			<p>Its prehensile tail allow the spider monkey to hang and swing from tree branches. The tail can also pick up fruit and throw things!</p>
-			<img src="../images/spider-monkey.jpg" alt="placeholder">
+			<img src="../_images/spider-monkey.jpg" alt="placeholder">
 		</div>
 		<div class="float tab">
 			<h3>Jaguar</h3>
 			<p>They are excellent swimmers, adapted to the wet environment of the rainforest. They can move slowly and silently when stalking prey. Their spots also help them blend into the trees.</p>
-			<img src="../images/jaguar.jpg" alt="placeholder">
+			<img src="../_images/jaguar.jpg" alt="placeholder">
 		</div>
 		<div class="float tab">
 			<h3>Sloths</h3>
 			<p>Their grey-brown fur helps them blend into tree trunks, camouflaging them from predators. Their thick, dense coats help them keep dry in the rain. Sloths are very slow because they have a prolonged metabolism, meaning they can stay in the same tree for days before going down to the ground to get food.</p>
-			<img src="../images/sloth.jpg" alt="placeholder">
+			<img src="../_images/sloth.jpg" alt="placeholder">
 		</div>
 	</div>
 </div>
@@ -91,22 +91,22 @@
 		<div class="float tab" href="https://github.com">
 			<h3>Wide Roots</h3>
 			<p>Trees have thick, strong buttress roots to support them as they grow very tall. Also, as the nutrients are located in the top soil, tree roots grow wide rather than deep.</p>
-			<img src="../images/wide-roots.jpg" alt="image of wide tree roots">
+			<img src="../_images/wide-roots.jpg" alt="image of wide tree roots">
 		</div>
 		<div class="float tab" href="https://github.com">
 			<h3>Drip Tips</h3>
 			<p>The pointed tips of leaves channel water so that the weight of the water does not damage the plant. The waxy coating of the leaves also helps repel rain.</p>
-			<img src="../images/drip-tip.jpg" alt="closeup image of leaves">
+			<img src="../_images/drip-tip.jpg" alt="closeup image of leaves">
 		</div>
 		<div class="float tab" href="https://github.com">
 			<h3>More Photosynthesis!</h3>
 			<p>Leaves under the canopy are much larger to absorb more light, and the stems are flexible to allow the leaves to move with the sun.</p>
-			<img src="../images/big-leaf.jpg" alt="man next to a large leaf">
+			<img src="../_images/big-leaf.jpg" alt="man next to a large leaf">
 		</div>
 		<div class="float tab">
 			<h3>Climbing Vines</h3>
 			<p>Epiphytes are plants that grow on the surface of another plant. Lianas (vines) grow around trees as they climb to reach sunlight.</p>
-			<img src="../images/epiphytes.jpg" alt="vines wrapping around a tree trunk">
+			<img src="../_images/epiphytes.jpg" alt="vines wrapping around a tree trunk">
 		</div>
 	</div>
 </div>
