--- a/example/index.html
+++ b/example/index.html
@@ -6,17 +6,17 @@
 	<title>sbird \_?v?_/</title>
 	<link rel="icon" type="image/x-icon" href="bird.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/_fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
 <nav>
 	<ul>
 		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="page1" href="../page1/"><i data-feather="layout"></i></a></li>
-		<li><a class="page2" href="../page2/"><i data-feather="layout"></i></a></li>
-		<li><a class="page3" href="../page3/"><i data-feather="layout"></i></a></li>
-		<li><a class="page4" href="../page4/"><i data-feather="layout"></i></a></li>
+		<li><a class="projects" href="../projects/"><i data-feather="layout"></i></a></li>
+		<li><a class="articles" href="../articles/"><i data-feather="layout"></i></a></li>
+		<li><a class="games" href="../games/"><i data-feather="layout"></i></a></li>
+		<li><a class="other" href="../other/"><i data-feather="layout"></i></a></li>
 		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
 	</ul>
 </nav>
