--- a/other/index.html
+++ b/other/index.html
@@ -6,24 +6,24 @@
 	<title>sbird \_*v*_/</title>
 	<link rel="icon" type="image/x-icon" href="../bird4.svg" class="fav">
 	<link rel="stylesheet" href="../style.css">
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"/>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/_fonts/remixicon.css"/>
 	<script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
 <nav>
 	<ul>
 		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="page1" href="../page1/"><i data-feather="layout"></i></a></li>
-		<li><a class="page2" href="../page2/"><i data-feather="layout"></i></a></li>
-		<li><a class="page3" href="../page3/"><i data-feather="layout"></i></a></li>
-		<li><a class="page4 activenav" href=""><i data-feather="layout"></i></a></li>
+		<li><a class="projects" href="../projects/"><i data-feather="layout"></i></a></li>
+		<li><a class="articles" href="../articles/"><i data-feather="layout"></i></a></li>
+		<li><a class="games" href="../games/"><i data-feather="layout"></i></a></li>
+		<li><a class="other activenav" href=""><i data-feather="layout"></i></a></li>
 		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
 		<li><a class="example" href="../example/"><i data-feather="tool"></i></a></li>
 	</ul>
 </nav>
 <div class="header">
 	<h3>hello</h3>
-	<h1>Hey there! I'm <span>page4</span> and I enjoy reading some good books</h1>
+	<h1>Hey there! I'm <span>other</span> and I enjoy reading some good books</h1>
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-rain"></i> by sbird</p>
