added new navbar icons to replace placeholders, changed games page to photos page

--- a/photos/index.html
+++ b/photos/index.html
@@ -13,17 +13,17 @@
 <nav>
 	<ul>
 		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="projects" href="../projects/"><i data-feather="layout"></i></a></li>
-		<li><a class="articles" href="../articles/"><i data-feather="layout"></i></a></li>
-		<li><a class="games activenav" href=""><i data-feather="layout"></i></a></li>
-		<li><a class="other" href="../other/"><i data-feather="layout"></i></a></li>
+		<li><a class="projects" href="../projects/"><i data-feather="save"></i></a></li>
+		<li><a class="articles" href="../articles/"><i data-feather="edit-3"></i></a></li>
+		<li><a class="photos activenav" href=""><i data-feather="image"></i></a></li>
+		<li><a class="other" href="../other/"><i data-feather="paperclip"></i></a></li>
 		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
 		<li><a class="example" href="../example/"><i data-feather="tool"></i></a></li>
 	</ul>
 </nav>
 <div class="header">
 	<h3>hello</h3>
-	<h1>Good evening, I'm <span>games</span> and I firmly believe cereal is a soup</h1>
+	<h1>Good evening, I'm <span>photos</span> and I firmly believe cereal is a soup</h1>
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
