--- a/rainforest/index.html
+++ b/rainforest/index.html
@@ -14,10 +14,10 @@
 <nav>
 	<ul>
 		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="projects" href="../projects/"><i data-feather="layout"></i></a></li>
-		<li><a class="articles" href="../articles/"><i data-feather="layout"></i></a></li>
-		<li><a class="games" href="../games/"><i data-feather="layout"></i></a></li>
-		<li><a class="other" href="../other/"><i data-feather="layout"></i></a></li>
+		<li><a class="projects" href="../projects/"><i data-feather="save"></i></a></li>
+		<li><a class="articles" href="../articles/"><i data-feather="edit-3"></i></a></li>
+		<li><a class="photos" href="../photos/"><i data-feather="image"></i></a></li>
+		<li><a class="other" href="../other/"><i data-feather="paperclip"></i></a></li>
 		<li><a class="about" href="../about/"><i data-feather="coffee"></i></a></li>
 	</ul>
 </nav>
