navbar icon for projects changed from floppy disk to pull request icon

--- a/photos/index.html
+++ b/photos/index.html
@@ -13,7 +13,7 @@
 <nav>
 	<ul>
 		<li><a class="home" href="../"><i data-feather="droplet"></i></a></li>
-		<li><a class="projects" href="../projects/"><i data-feather="save"></i></a></li>
+		<li><a class="projects" href="../projects/"><i data-feather="git-pull-request"></i></a></li>
 		<li><a class="articles" href="../articles/"><i data-feather="edit-3"></i></a></li>
 		<li><a class="photos activenav" href=""><i data-feather="image"></i></a></li>
 		<li><a class="other" href="../other/"><i data-feather="paperclip"></i></a></li>
