images reorganised, revisionio images added

--- a/projects/index.html
+++ b/projects/index.html
@@ -22,8 +22,12 @@
 	</ul>
 </nav>
 <div class="header">
-	<h3>hello</h3>
-	<h1>Good morning, I'm <span>projects</span> and I like snakes</h1>
+	<h3>projects</h3>
+	<h1>I work on a lot of <span>projects</span> in my free time</h1>
+</div>
+<div class="section multipicture">
+	<img class="slide1" src="../_images/projects/revisionio-1.png" alt="placeholder">
+	<img class="slide2" src="../_images/projects/revisionio-2.png" alt="placeholder">
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
