--- a/projects/index.html
+++ b/projects/index.html
@@ -33,7 +33,7 @@
 <div id="projectModal" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<span class="close">&times;</span>
+			<span class="close"><i data-feather="x"></i></span>
 			<h2>Modal Header</h2>
 		</div>
 		<div class="modal-body">
@@ -63,19 +63,19 @@
 
 	// When the user clicks on the button, open the modal
 	btn.onclick = function() {
-	modal.style.display = "block";
+		modal.style.display = "block";
 	}
 
 	// When the user clicks on <span> (x), close the modal
 	span.onclick = function() {
-	modal.style.display = "none";
+		modal.style.display = "none";
 	}
 
 	// When the user clicks anywhere outside of the modal, close it
 	window.onclick = function(event) {
-	if (event.target == modal) {
-		modal.style.display = "none";
-	}
+		if (event.target == modal) {
+			modal.style.display = "none";
+		}
 	} 
 </script>
 </body>
