modal button on tabs, modal is now animated

--- a/projects/index.html
+++ b/projects/index.html
@@ -25,11 +25,31 @@
 	<h3>projects</h3>
 	<h1>I work on a lot of <span>projects</span> in my free time</h1>
 </div>
-<div class="section multipicture">
-	<img class="slide1" src="../_images/projects/revisionio-1.png" alt="placeholder">
-	<img class="slide2" src="../_images/projects/revisionio-2.png" alt="placeholder">
+<div class="section">
+	<h2><i data-feather="align-right"></i> Programs</h2>
+	<div class="tabs">
+		<div class="float tab">
+			<h3>revisionio <button id="modalButton"><i data-feather="info"></i></button></h3>
+			<p>example text. blah blah blah.</p>
+			<a href="https://github.com/swarbler/quiz"><img src="../_images/projects/revisionio-1.png" alt="revisionio"></a>
+		</div>
+	</div>
 </div>
-<button id="modalButton">Open Modal</button>
+<div class="section">
+	<h2><i data-feather="align-right"></i> Games</h2>
+	<div class="tabs">
+		<a class="float tab" href="https://github.com">
+			<h3>Example 1</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+		<a class="float tab" href="https://github.com">
+			<h3>Example 2</h3>
+			<p>example text. blah blah blah.</p>
+			<img src="https://placehold.co/600x400" alt="placeholder">
+		</a>
+	</div>
+</div>
 <div id="projectModal" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
