--- a/projects/index.html
+++ b/projects/index.html
@@ -29,9 +29,14 @@
 	<h2><i data-feather="align-right"></i> Programs</h2>
 	<div class="tabs">
 		<div class="float tab">
-			<h3>revisionio <button id="modalButton"><i data-feather="info"></i></button></h3>
+			<h3>revisionio <button id="revisionioButton" onclick="displayModal('revisionio')"><i data-feather="info"></i></button></h3>
 			<p>example text. blah blah blah.</p>
 			<a href="https://github.com/swarbler/quiz"><img src="../_images/projects/revisionio-1.png" alt="revisionio"></a>
+		</div>
+		<div class="float tab">
+			<h3>pname <button id="pnameButton" onclick="displayModal('pname')"><i data-feather="info"></i></button></h3>
+			<p>example text. blah blah blah.</p>
+			<a href="https://github.com/swarbler/pname"><img src="../_images/projects/pname-1.png" alt="pname"></a>
 		</div>
 	</div>
 </div>
@@ -50,11 +55,26 @@
 		</a>
 	</div>
 </div>
-<div id="projectModal" class="modal">
+<div id="revisionioModal" class="modal">
 	<div class="modal-content">
 		<div class="modal-header">
-			<span class="close"><i data-feather="x"></i></span>
-			<h2>Modal Header</h2>
+			<span class="revisionio close"><i data-feather="x"></i></span>
+			<h2>revisionio</h2>
+		</div>
+		<div class="modal-body">
+			<p>Some text in the Modal Body</p>
+			<p>Some other text...</p>
+		</div>
+		<div class="modal-footer">
+			<h3>Modal Footer</h3>
+		</div>
+	</div>
+</div>
+<div id="pnameModal" class="modal">
+	<div class="modal-content">
+		<div class="modal-header">
+			<span class="pname close"><i data-feather="x"></i></span>
+			<h2>pname</h2>
 		</div>
 		<div class="modal-body">
 			<p>Some text in the Modal Body</p>
@@ -72,31 +92,30 @@
 	feather.replace();
 </script>
 <script>
-	// Get the modal
-	var modal = document.getElementById("projectModal");
+	function displayModal(param=""){
+		// Get the modal
+		var modal = document.getElementById(`${param}Modal`);
 
-	// Get the button that opens the modal
-	var btn = document.getElementById("modalButton");
+		// Get the button that opens the modal
+		var btn = document.getElementById(`${param}Button`);
 
-	// Get the <span> element that closes the modal
-	var span = document.getElementsByClassName("close")[0];
+		// Get the <span> element that closes the modal
+		var span = document.getElementsByClassName(`${param} close`)[0];
 
-	// When the user clicks on the button, open the modal
-	btn.onclick = function() {
 		modal.style.display = "block";
-	}
 
-	// When the user clicks on <span> (x), close the modal
-	span.onclick = function() {
-		modal.style.display = "none";
-	}
-
-	// When the user clicks anywhere outside of the modal, close it
-	window.onclick = function(event) {
-		if (event.target == modal) {
+		// When the user clicks on <span> (x), close the modal
+		span.onclick = function() {
 			modal.style.display = "none";
 		}
-	} 
+
+		// When the user clicks anywhere outside of the modal, close it
+		window.onclick = function(event) {
+			if (event.target == modal) {
+				modal.style.display = "none";
+			}
+		} 
+	}
 </script>
 </body>
 </html>
