added images to modals, modified header of placeholder pages, removed modal footer

--- a/other/index.html
+++ b/other/index.html
@@ -22,8 +22,8 @@
 	</ul>
 </nav>
 <div class="header">
-	<h3>hello</h3>
-	<h1>Hey there! I'm <span>other</span> and I enjoy reading some good books</h1>
+	<h3>other</h3>
+	<h1>Hey there! I'm the <span>other page</span> and cereal is a soup</h1>
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-rain"></i> by sbird</p>
