--- a/photos/index.html
+++ b/photos/index.html
@@ -22,8 +22,8 @@
 	</ul>
 </nav>
 <div class="header">
-	<h3>hello</h3>
-	<h1>Good evening, I'm <span>photos</span> and I firmly believe cereal is a soup</h1>
+	<h3>photos</h3>
+	<h1>I enjoy taking <span>photos</span> of all sorts of things</h1>
 </div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
