--- a/projects/index.html
+++ b/projects/index.html
@@ -64,9 +64,7 @@
 		<div class="modal-body">
 			<p>Some text in the Modal Body</p>
 			<p>Some other text...</p>
-		</div>
-		<div class="modal-footer">
-			<h3>Modal Footer</h3>
+			<img src="../_images/projects/revisionio-2.png" alt="revisionio">
 		</div>
 	</div>
 </div>
@@ -79,9 +77,7 @@
 		<div class="modal-body">
 			<p>Some text in the Modal Body</p>
 			<p>Some other text...</p>
-		</div>
-		<div class="modal-footer">
-			<h3>Modal Footer</h3>
+			<img src="../_images/projects/pname-2.png" alt="pname">
 		</div>
 	</div>
 </div>
