added gallery section

--- a/photos/index.html
+++ b/photos/index.html
@@ -25,6 +25,17 @@
 	<h3>photos</h3>
 	<h1>I enjoy taking <span>photos</span> of all sorts of things</h1>
 </div>
+<div class="section gallery">
+	<h2><i data-feather="align-right"></i> Stuff</h2>
+	<img src="https://placehold.co/600x400" alt="placeholder">
+	<img src="https://placehold.co/600x400" alt="placeholder">
+	<img src="https://placehold.co/600x400" alt="placeholder">
+	<img src="https://placehold.co/600x400" alt="placeholder">
+	<img src="https://placehold.co/600x400" alt="placeholder">
+	<img src="https://placehold.co/600x400" alt="placeholder">
+	<img src="https://placehold.co/600x400" alt="placeholder">
+	<img src="https://placehold.co/600x400" alt="placeholder">
+</div>
 <div class="footer">
 	<p>Made with <i data-feather="cloud-drizzle"></i> by sbird</p>
 </div>
